--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body class="bg-[#f0fdf4]">
     <header>
       <nav class="nav-bar">
         <div class="navbar bg-[#15803D] shadow-sm md:px-[135px] max-w-[1920px] mx-auto">
@@ -80,15 +80,79 @@
       </nav>
     </header>
 
+    <section class="about-campaign">
+        <div class="max-w-[1090px] mx-auto mt-[100px]">
+            <h2 class="text-[32px] font-semibold text-center mb-[40px]">About the Campaign</h2>
+        <div class="flex flex-col md:flex-row gap-[30px]">
+            <img class="h-[400px]" src="./assets/about.png" alt="">
+            <div class="flex justify-center items-center text-gray-600 px-3 md:px-0">
+                <div>
+                <p>Green Earth is a global tree plantation initiative dedicated to fighting <br>climate change. Since our start, we’ve planted over 500,000 trees <br>worldwide. By joining our campaign, you help restore forests, create <br>habitats for wildlife, and combat global warming.</p>
+                <ol class="list-disc ml-5 mt-3">
+                    <li>Restoration of natural habitats</li>
+                    <li>Improvement of air quality</li>
+                    <li>Support for local communities</li>
+                </ol>
+            </div>
+            </div>
+        </div>
+        </div>
+    </section>
 
+  <section class="our-impact">
+  <div class="bg-[#cff0dc] w-full h-full md:h-[360px] max-w-[1920px] mx-auto mt-[100px] flex flex-col items-center py-10 px-4 md:px-0">
+    <h2 class="text-[28px] md:text-[32px] font-semibold text-center mb-8 md:mb-12">Our Impact</h2>
+    <div class="flex flex-col sm:flex-row flex-wrap justify-center gap-6 md:gap-[50px]">
 
+      <div class="card bg-white flex flex-col justify-center items-center h-[140px] sm:h-[156px] w-full sm:w-[390px] md:w-[516px] p-4">
+        <h2 class="text-[28px] sm:text-[32px] font-semibold text-[#15803d]">500K+</h2>
+        <p class="text-gray-500 text-sm sm:text-base">Trees Planted</p>
+      </div>
 
+      <div class="card bg-white flex flex-col justify-center items-center h-[140px] sm:h-[156px] w-full sm:w-[390px] md:w-[516px] p-4">
+        <h2 class="text-[28px] sm:text-[32px] font-semibold text-[#15803d]">120+</h2>
+        <p class="text-gray-500 text-sm sm:text-base">Communities Involved</p>
+      </div>
 
+      <div class="card bg-white flex flex-col justify-center items-center h-[140px] sm:h-[156px] w-full sm:w-[390px] md:w-[516px] p-4">
+        <h2 class="text-[28px] sm:text-[32px] font-semibold text-[#15803d]">30+</h2>
+        <p class="text-gray-500 text-sm sm:text-base">Countries Reached</p>
+      </div>
 
+    </div>
+  </div>
+</section>
 
+<section class="input-section">
+  <div class="h-[491px] max-w-[1920px] mx-auto bg-[#166534] flex flex-col items-center justify-start px-4 pt-17">
+    
+    <h1 class="text-white text-3xl font-semibold mb-6">Plant a Tree Today</h1>
+    <div class="w-full h-[311] max-w-[650px] bg-[#15803D] rounded-lg p-8 shadow-lg text-center">
+      <form class="space-y-4">
+        <input type="text" placeholder="Your Name"
+          class="w-full px-4 py-2 rounded-md focus:outline-none text-gray-800 bg-white" />
 
+        <input type="email" placeholder="Your Email Address"
+          class="w-full px-4 py-2 rounded-md focus:outline-none text-gray-800 bg-white" />
 
+        <select class="w-full px-4 py-2 rounded-md focus:outline-none bg-white">
+          <option>Number of Trees</option>
+          
+        </select>
 
+        <button type="submit"
+          class="w-full py-2 rounded-full bg-yellow-400 text-[#15803D] font-semibold cursor-pointer">
+          Donate Now
+        </button>
+      </form>
+    </div>
+  </div>
+</section>
 
+<footer>
+    <div class="max-w-[1920px] mx-auto h-[72px] bg-[#14532D] flex justify-center items-center">
+        <p class="text-white">© 2025 Green Earth. All Rights Reserved.</p>
+    </div>
+</footer>
   </body>
 </html>
