readme file added

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
       </nav>
     </header>
 
+<main>
+    
+    <section>
+        <h2 class="text-[32px] font-semibold text-center mt-[100px]">Choose Your Trees</h2>
+        <div class="max-w-[1650px] mx-auto h-[873px] border-1">
+
+        </div>
+    </section>
+
     <section class="about-campaign">
         <div class="max-w-[1090px] mx-auto mt-[100px]">
             <h2 class="text-[32px] font-semibold text-center mb-[40px]">About the Campaign</h2>
@@ -148,6 +157,8 @@
     </div>
   </div>
 </section>
+</main>
+
 
 <footer>
     <div class="max-w-[1920px] mx-auto h-[72px] bg-[#14532D] flex justify-center items-center">
