--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="shortcut icon" href="./assets/hero-leaf1.png" type="image/x-icon">
   </head>
   <body class="bg-[#f0fdf4]">
     <header>
@@ -65,7 +66,7 @@
         </div>
       </nav>
       <nav class="nav-banner">
-         <div class="h-[200px] md:h-[382px] bg-[#cff0dc] flex justify-between items-center max-w-[1920px] mx-auto">
+         <div class="h-[200px] md:h-[375px] bg-[#cff0dc] flex justify-between items-center max-w-[1920px] mx-auto">
             <img class="w-[25%] md:w-[28%]" src="./assets/hero-leaf1.png" alt="">
             <div class="text-center space-y-3 md:space-y-4">
                 <h2 class="text-[16px] md:text-[48px] font-semibold">Plant a Tree, Grow a Future</h2>
@@ -81,13 +82,44 @@
     </header>
 
 <main>
-    
-    <section>
-        <h2 class="text-[32px] font-semibold text-center mt-[100px]">Choose Your Trees</h2>
-        <div class="max-w-[1650px] mx-auto h-[873px] border-1">
+<div class="max-w-[1920px] mx-auto py-6 px-4 sm:px-6 md:px-10">
+  <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-6">
+    Choose Your Trees
+  </h1>
 
-        </div>
-    </section>
+  <div class="grid grid-cols-12 gap-4 sm:gap-6">
+    <aside class="col-span-12 md:col-span-2 bg-white shadow rounded-xl p-4">
+      <h2 class="font-bold mb-4 text-lg sm:text-xl">Categories</h2>
+      <ul id="categories" class="space-y-2"></ul>
+    </aside>
+    <main class="col-span-12 md:col-span-8">
+      <div id="loading" class="hidden flex justify-center items-center py-10">
+        <div class="animate-spin rounded-full h-10 w-10 sm:h-12 sm:w-12 border-4 border-green-600 border-t-transparent"></div>
+      </div>
+      <div id="plants" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"></div>
+    </main>
+    <aside class="col-span-12 md:col-span-2 bg-white shadow rounded-xl p-4 mt-4 md:mt-0">
+      <h2 class="font-bold mb-4 text-lg sm:text-xl">Your Cart</h2>
+      <div id="cart-items" class="space-y-2"></div>
+      <div class="mt-4 flex justify-between font-bold border-t pt-2 cursor-pointer">
+        <span>Total:</span>
+        <span id="cart-total">৳0</span>
+      </div>
+    </aside>
+  </div>
+</div>
+<dialog id="word_modal" class="modal modal-bottom sm:modal-middle">
+  <div class="modal-box">
+   <div id="details-container" class="space-y-3">
+    
+   </div>
+    <div class="modal-action">
+      <form method="dialog">
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
 
     <section class="about-campaign">
         <div class="max-w-[1090px] mx-auto mt-[100px]">
@@ -165,5 +197,7 @@
         <p class="text-white">© 2025 Green Earth. All Rights Reserved.</p>
     </div>
 </footer>
+
+<script src="./index.js"></script>
   </body>
 </html>
